// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets all workshops 1`] = `
Object {
  "workshops": Array [
    Object {
      "description": "This is the conversation workshop description.",
      "levels": Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
      "name": "Conversation",
      "options": Array [
        Object {
          "available": true,
          "day": "Lunes",
          "id": "id1",
          "teacher_name": "Fulanito",
          "time": "1300 - 14:00",
          "url": "http://url1",
          "workshop_name": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "Martes",
          "id": "id2",
          "teacher_name": "Fulanito",
          "time": "13:00 - 14:00",
          "url": "http://url2",
          "workshop_name": "Conversation",
          "zoom_id": null,
        },
      ],
    },
  ],
}
`;

exports[`makes a reservation 1`] = `
Object {
  "apellido_materno": "Ocasio",
  "apellido_paterno": "Martinez",
  "codigo": "1234567890",
  "grupo": "E4-1",
  "nivel": "4",
  "nombre": "Benito Antonio",
  "option_id": "id1",
  "option_name": "why? option_name from makeReservation dataSource",
  "workshop_id": "workshop_id1",
  "workshop_name": "Conversation",
}
`;

exports[`student data already registered 1`] = `
Object {
  "student": Object {
    "nombre": "Juan",
    "reservation": Object {
      "day": "Lunes",
      "teacher_name": "Fulanito",
      "time": "1300 - 14:00",
      "url": "http://url1",
      "workshop_name": "Conversation",
    },
  },
}
`;

exports[`student data normal not registered 1`] = `
Object {
  "student": Object {
    "nombre": "Benito Antonio",
    "reservation": null,
  },
}
`;

exports[`teacher dashboard no reservations 1`] = `
Object {
  "teacher": Object {
    "id": "teacher_id2",
    "name": "Manganito",
    "options": Array [
      Object {
        "day": "Lunes",
        "id": "id1",
        "reservations": null,
        "time": "1300 - 14:00",
        "url": "http://url1",
      },
    ],
  },
}
`;

exports[`teacher dashboard normal 1`] = `
Object {
  "teacher": Object {
    "id": "teacher_id1",
    "name": "Fulanito",
    "options": Array [
      Object {
        "day": "Lunes",
        "id": "id1",
        "reservations": Array [
          Object {
            "apellido_materno": "Ocasio",
            "apellido_paterno": "Martinez",
            "codigo": "1234567890",
            "grupo": "E4-1",
            "nivel": "4",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "1300 - 14:00",
        "url": "http://url1",
      },
      Object {
        "day": "Martes",
        "id": "id2",
        "reservations": null,
        "time": "13:00 - 14:00",
        "url": "http://url2",
      },
    ],
  },
}
`;
